Added seeds cotnroller
